--- a/web_dynamic/static/styles/3-header.css
+++ b/web_dynamic/static/styles/3-header.css
@@ -1,4 +1,5 @@
 header {
+    display: block;
     background: white;
     height: 70px;
     width: 100%;
@@ -8,4 +9,20 @@ header .logo {
     background: url("../images/logo.png") no-repeat;
     left: 20px;
     height: 100%;
+    width: 140px;
 }
+
+.available {
+  background: #ff545f !important;
+}
+
+header #api_status {
+  background: #cccccc;
+  width: 40px;
+  height: 40px;
+  border-radius: 20px;
+  float: right;
+  margin-top: 15px;
+  margin-right: 30px;
+}
+
